--- a/src/stylesheets/DebuggingPage.css
+++ b/src/stylesheets/DebuggingPage.css
@@ -60,6 +60,7 @@
    color:white;
    border-radius: 10px;
    padding: 5px;
+   /* align-self: flex-end; */
 }
 
 .submit-var-btn:hover{
@@ -67,10 +68,12 @@
 }
 .var-name-output-container{
     display:flex;
+    flex-direction: column;
     align-items: baseline;
     gap: 10px;
     color:rgb(77, 191, 219);
     font-weight: bold;
+    width: fit-content;
 
 }
 
@@ -126,3 +129,20 @@
     margin-top: 20px;
 }
 
+.names-table-container{
+    display:flex;
+    flex-direction:column;
+    overflow-y: auto;
+    border: 1px solid;
+}
+.refresh-btn{
+    /* align-self: flex-end; */
+    /* display: flex;
+    justify-content: flex-end; */
+    width: auto;
+    margin-right: auto;
+}
+
+.refresh-btn:hover{
+    background-color: lightgray;
+}
