--- a/src/stylesheets/SwitchBoardPage.css
+++ b/src/stylesheets/SwitchBoardPage.css
@@ -115,7 +115,7 @@ h1{
     color:white; 
     border-radius: 10px;
     padding: 5px;
-    margin-left: auto;
+    /* margin-left: auto; */
    
 }
 .submit-uid-btn:hover{
