--- a/src/stylesheets/SwitchBoardPage.css
+++ b/src/stylesheets/SwitchBoardPage.css
@@ -1,134 +1,166 @@
-
 /* the start of Agent Switchboard Page */
 
-.agent-switchboard-container{
+.agent-switchboard-container {
     border: 2px solid black;
     margin-top: 20px;
     margin-bottom: 20px;
-    margin-left:30%;
-    display: inline-block;  
+    margin-left: 30%;
+    display: inline-block;
     padding: 20px;
     max-width: 100vw;
     max-height: 100vh;
     /* overflow-y:auto; */
-    position:relative;
+    position: relative;
 }
-h1{
-    text-align:center;
-    font-size:30px;
+
+h1 {
+    text-align: center;
+    font-size: 30px;
     color: rgb(24, 103, 123);
     font-weight: 900;
 }
 
-.toggle-btns-container{
-    display:flex;
-    flex-direction:row;
-    align-items: center;
+.toggle-btns-container {
+    display: flex;
+    flex-direction: row;
+    /* align-items: center; */
     justify-content: center;
-    gap:2rem;
+    gap: 2rem;
     margin-top: 20px;
 }
-.label-btn-container{
+
+.label-btn-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1rem;
-    padding-left:20px;
+    padding-left: 20px;
 }
-.top-btns.on, .top-btns.off, .top-btns.error{
-    border-radius:40px;
-    padding:5px;
+
+
+.top-btns.on,
+.top-btns.off,
+.top-btns.error {
+    border-radius: 40px;
+    padding: 5px;
     text-decoration: none;
-    width:80px;
-    height:80px;
+    width: 80px;
+    height: 80px;
 }
 
-.top-btns.on:hover, .top-btns.off:hover, .top-btns.error:hover{
-   border-color: rgb(77, 191, 219);
+.top-btns.on:hover,
+.top-btns.off:hover,
+.top-btns.error:hover {
+    border-color: rgb(77, 191, 219);
 }
 
-.top-btns.on{
+.top-btns.on {
     background-color: rgb(88, 255, 79);
-    color:white;
+    color: white;
 }
-.top-btns.off{
+
+.top-btns.off {
     background-color: darkgray;
-    color:black;
+    color: black;
 }
-.top-btns.error{
+
+.top-btns.error {
     background-color: red;
-    color:black;
+    color: black;
+}
+
+#queue-add-position-btn{
+    margin-right: 15px;
+}
+#suggest-on-ingest-btn{
+    margin-left: 35px;
+}
+#suggest-on-ingest-btn-container{
+    align-self: center;
 }
 
 /* Generate Report */
 
-.generate-btns-container{
-    display:flex;
-    flex-direction:row;
+.generate-btns-container {
+    display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
-    padding:5px;
-    gap:2rem;
+    padding: 5px;
+    gap: 2rem;
     margin-top: 40px;
 }
-.suggestion-btn.idle,.suggestion-btn.loading, .suggestion-btn.error,.report-btn.idle, .report-btn.loading, .report-btn.error{
+
+.suggestion-btn.idle,
+.suggestion-btn.loading,
+.suggestion-btn.error,
+.report-btn.idle,
+.report-btn.loading,
+.report-btn.error {
     border-radius: 10px;
     padding: 5px;
-    width:150px;
+    width: 150px;
     height: 50px;
 }
-.suggestion-btn.idle,.report-btn.idle{
+
+.suggestion-btn.idle,
+.report-btn.idle {
     background-color: lightgray;
 }
 
-.suggestion-btn.idle:hover,.report-btn.idle:hover{
+.suggestion-btn.idle:hover,
+.report-btn.idle:hover {
     background-color: rgb(242, 242, 242);
 }
 
-.report-btn.loading, .suggestion-btn.loading{
+.report-btn.loading,
+.suggestion-btn.loading {
     background-color: rgb(88, 255, 79);
 }
-.report-btn.error, .suggestion-btn.error{
+
+.report-btn.error,
+.suggestion-btn.error {
     background-color: red;
 }
 
 /* Agent UID */
 
-.tell-agent-container{
-  margin-left: 10px;
-  margin-right: 10px;
-  margin-top: 30px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 10px;
-  margin-bottom: 20px;
+.tell-agent-container {
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+    margin-bottom: 20px;
 }
 
-.submit-uid-btn{
+.submit-uid-btn {
     background-color: rgb(45, 174, 38);
-    color:white; 
+    color: white;
     border-radius: 10px;
     padding: 5px;
-    /* margin-left: auto; */
-   
+    border: 1px solid black;
+
 }
-.submit-uid-btn:hover{
+
+.submit-uid-btn:hover {
     background-color: lightgrey;
 }
-.uid-text-area-title{
+
+.uid-text-area-title {
     font-weight: bold;
-    
+
 }
-.uid-text-area-description{
-   font-weight: bold;
+
+.uid-text-area-description {
+    font-weight: bold;
     font-size: 10px;
     color: darkgray;
 }
 
-.error-text{
-    color:red;
+.error-text {
+    color: red;
     margin: 0;
 }
-
-
