--- a/src/stylesheets/DebuggingPage.css
+++ b/src/stylesheets/DebuggingPage.css
@@ -40,6 +40,9 @@
     margin-bottom: 0;
     display: flex;
     align-items: flex-end;
+    font-size: 30px;
+    color: rgb(24, 103, 123);
+    font-weight: 900;
 }
 
 .v-row1 {
