--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -1,7 +1,7 @@
 /* temp */
 * {
-  /* font-family: "Times New Roman", Times, serif; */
-  font-family: inter;
+
+  font-family:'Roboto', sans-serif;
   font-size: 16px;
 
 }
