--- a/src/stylesheets/SwitchBoardPage.css
+++ b/src/stylesheets/SwitchBoardPage.css
@@ -10,7 +10,7 @@
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.08);
 }
 
-h1 {
+#agent-switchboard-title{
     text-align: center;
     font-size: 30px;
     color: rgb(24, 103, 123);
@@ -51,12 +51,13 @@ h1 {
     text-decoration: none;
     width: 80px;
     height: 80px;
+    border: 1px solid black;
 }
 
 .top-btns.on:hover,
 .top-btns.off:hover,
 .top-btns.error:hover {
-    border-color: rgb(77, 191, 219);
+    border: 2px solid rgb(88, 255, 79);
 }
 
 .top-btns.on {
@@ -96,7 +97,8 @@ h1 {
     border-radius: 10px;
     padding: 5px;
     width: 150px;
-    height: 50px;
+    height: 55px;
+    border: 1px solid black;
 }
 
 .suggestion-btn.idle,
@@ -131,7 +133,6 @@ h1 {
     gap: 10px;
     margin-bottom: 20px;
 }
-
 .submit-uid-btn {
     background-color: rgb(45, 174, 38);
     color: white;
@@ -143,6 +144,14 @@ h1 {
 
 .submit-uid-btn:hover {
     background-color: lightgrey;
+}
+
+.tell-uid {
+  resize: none;
+  width: 500px;
+  height: 100px;
+  border-radius: 5px;
+  border: 1px solid black;
 }
 
 .uid-text-area-title {
@@ -160,3 +169,4 @@ h1 {
     color: red;
     margin: 0;
 }
+
