--- a/src/stylesheets/NavBar.css
+++ b/src/stylesheets/NavBar.css
@@ -3,8 +3,9 @@
   justify-content: space-between;
   align-items: center;
   padding: 2rem 2rem;
-  background-color: rgb(24, 103, 123);
+  background-color: rgb(9, 49, 59);
   color: white;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.08);
 }
 
 .nav-links {
