--- a/src/stylesheets/SideBar.css
+++ b/src/stylesheets/SideBar.css
@@ -10,10 +10,26 @@
   padding: 1rem;
   height: 100%;
 }
+.sidebar ul {
+  list-style: disc;
+  padding-left: 1.5rem; 
+  margin: 0; 
+}
+
+.side-bar-title {
+  font-size: 20px;
+  font-weight: bold;
+  color: rgb(9, 49, 59);
+}
+
+.side-bar-delimiter {
+  margin-bottom: 10px;
+  border-top: 1px solid; 
+  border-color: rgb(9, 49, 59); 
+}
 
 .sidebar a {
   color: white;
-  text-decoration: none;
   display: block;
   margin: 0.5rem 0;
 }
@@ -22,8 +38,8 @@
   text-decoration: underline;
 }
 
-.main-content {
+/* .main-content {
   flex-grow: 1;
   padding: 2rem;
   overflow-y: auto;
-}
+} */
