--- a/src/stylesheets/UidStylesheets/UidPage.css
+++ b/src/stylesheets/UidStylesheets/UidPage.css
@@ -9,6 +9,10 @@
   height: 100%;
 }
 
+.report-data-main-content {
+  display: flex;
+  flex-direction: row;
+}
 
 .main-content {
   flex: 1;
@@ -19,5 +23,5 @@
 .report-data-main-section-container {
   flex: 1;
   display: flex;
-  flex-direction: row; 
+  flex-direction: row;
 }
