--- a/src/stylesheets/UidStylesheets/SideBar.css
+++ b/src/stylesheets/UidStylesheets/SideBar.css
@@ -1,7 +1,7 @@
-.layout {
+ .side-bar-container{
   display: flex;
-  height: calc(100vh - 60px);
-}
+  height: 100%;
+ }
 
 .sidebar {
   width: 250px;
