--- a/src/stylesheets/UidStylesheets/UidPage.css
+++ b/src/stylesheets/UidStylesheets/UidPage.css
@@ -1,6 +1,11 @@
+.uid-page-container {
+  width: 100%;
+  height: 100%;
+}
+
 .report-data-page-container {
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 .report-data-main-layout {
