--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -3,6 +3,10 @@
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
 }
+html, body, #root {
+  height: 100%;
+  margin: 0;
+}
 
 body {
   margin: 0;
