--- a/src/stylesheets/SwitchBoardPage.css
+++ b/src/stylesheets/SwitchBoardPage.css
@@ -1,16 +1,20 @@
 /* the start of Agent Switchboard Page */
-.agent-switchboard-container {
+
+/* this is the parent in SwitchBoardPage.js */
+.agent-switchboard-wrapper {
     margin: 20px auto;
     margin-bottom: 20px;
     display: block;
     width: fit-content;
-    overflow: auto;
+    /* height: fit-content; */
+    /* overflow: auto; */
+    overflow-y: auto;
     position: relative;
     border-radius: 20px;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.08);
 }
 
-#agent-switchboard-title{
+#agent-switchboard-title {
     text-align: center;
     font-size: 30px;
     color: rgb(24, 103, 123);
@@ -133,6 +137,7 @@
     gap: 10px;
     margin-bottom: 20px;
 }
+
 .submit-uid-btn {
     background-color: rgb(45, 174, 38);
     color: white;
@@ -147,11 +152,11 @@
 }
 
 .tell-uid {
-  resize: none;
-  width: 500px;
-  height: 100px;
-  border-radius: 5px;
-  border: 1px solid black;
+    resize: none;
+    width: 500px;
+    height: 100px;
+    border-radius: 5px;
+    border: 1px solid black;
 }
 
 .uid-text-area-title {
@@ -169,4 +174,3 @@
     color: red;
     margin: 0;
 }
-
