--- a/src/stylesheets/UidStylesheets/IngestDataPage.css
+++ b/src/stylesheets/UidStylesheets/IngestDataPage.css
@@ -4,8 +4,12 @@
   gap: 2rem;
   padding: 1rem;
 }
+
 .ingest-data-page-graphs {
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  margin-bottom: 50px;
+
+  flex-wrap: wrap;
 }
