--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -14,6 +14,20 @@ body {
   overflow: auto;
 }
 
+/* testing */
+.main-page {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.page-content {
+  display: flex;
+  flex: 1;
+  overflow: hidden;
+}
+/* end  of testing */
+
 /* Navigation Button */
 
 .nav-btn-container {
