refactor: remove unused variables and console logs. Remove inline styling in IngestDataPage.js and add to the respective stylingsheet

--- a/src/stylesheets/UidStylesheets/IngestDataPage.css
+++ b/src/stylesheets/UidStylesheets/IngestDataPage.css
@@ -10,6 +10,10 @@
   flex-direction: column;
   gap: 2rem;
   margin-bottom: 50px;
-
   flex-wrap: wrap;
+}
+
+.observables-graph{
+  width: 100%;
+  height: 100%;
 }
