--- a/src/stylesheets/UidStylesheets/IngestDataPage.css
+++ b/src/stylesheets/UidStylesheets/IngestDataPage.css
@@ -13,7 +13,12 @@
   flex-wrap: wrap;
 }
 
-.observables-graph{
+.ind-vars-graph {
+  width: 100%;
+  height: 100%;
+}
+
+.observables-graph {
   width: 100%;
   height: 100%;
 }
