Refactor: changed html format in RemodelFromReportPage.js so plots zoom in and zoom out correctly. Also added css in RemodelFromReportPage.css to enable this

--- a/src/stylesheets/UidStylesheets/RemodelFromReportPage.css
+++ b/src/stylesheets/UidStylesheets/RemodelFromReportPage.css
@@ -13,7 +13,63 @@
     flex-wrap: wrap;
 }
 
+.distance-index-graph {
+    width: 100%;
+    height: 100%;
+}
+
+/* end of index graph css  */
+.plots-1D-container {
+    width: 100%;
+    height: 100%;
+}
+
+.plot1-ind-idx-color-cluster-labels-1D {
+    width: 100%;
+    height: 100%;
+}
+
 .cluster-centers-heatmap {
     width: 100%;
     height: 100%;
 }
+
+/* ##################################################################### */
+/* beginning of plot2-observable-sortedby-ind-coloredby-clusterlabel-1D*/
+.plot2-observable-sortedby-ind-coloredby-clusterlabel-1D-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.plot2-observable-sortedby-ind-coloredby-clusterlabel-1D-wrapper {
+    position: relative;
+    width: 100%;
+    height: 500px;
+}
+
+.waterfall-plot-scatter1D-offset-input-box {
+    position: absolute;
+    bottom: -50px;
+    right: 10px;
+    z-index: 10;
+
+}
+
+.offSetWFScatter1D-input {
+    padding: 10px 14px;
+    font-size: 15px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    outline: none;
+    transition: border 0.2s ease-in-out;
+    width: 215px;
+}
+
+.offSetWFScatter1D-input:focus {
+    border-color: #4dbfdb;
+    box-shadow: 0 0 4px rgba(77, 191, 219, 0.4);
+}
+
+/* end of plot2-observable-sortedby-ind-coloredby-clusterlabel-1D */
+/* ##################################################################### */
