--- a/src/stylesheets/SwitchBoardPage.css
+++ b/src/stylesheets/SwitchBoardPage.css
@@ -2,13 +2,19 @@
 
 /* this is the parent in SwitchBoardPage.js */
 .agent-switchboard-wrapper {
-    margin: 20px auto;
-    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    min-height: 100vh;
+    width: 100%;
+    overflow-y: auto;
+    padding: 20px;
+    padding-bottom: 10vh;
+}
+
+.agent-switchboard-container {
     display: block;
     width: fit-content;
-    /* height: fit-content; */
-    /* overflow: auto; */
-    overflow-y: auto;
     position: relative;
     border-radius: 20px;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.08);
