--- a/src/stylesheets/SwitchBoardPage.css
+++ b/src/stylesheets/SwitchBoardPage.css
@@ -157,6 +157,23 @@
     background-color: lightgrey;
 }
 
+.spinner {
+    border: 3px solid #f3f3f3;
+    border-top: 3px solid #3498db;
+    border-radius: 50%;
+    width: 18px;
+    height: 18px;
+    animation: spin 0.8s linear infinite;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+
 .tell-uid {
     resize: none;
     width: 500px;
@@ -180,3 +197,6 @@
     color: red;
     margin: 0;
 }
+
+
+
